[package]
name = "velcro2"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Developer workflows for Elasticsearch"
keywords = ["development", "elasticsearch", "migrations"]
authors = ["Adam McKee Bennett <adam.be.g84d@gmail.com>"]
homepage = "https://github.com/eighty4/velcro2"
repository = "https://github.com/eighty4/velcro2"
exclude = [".*", "Dockerfile", "docker-compose.yml"]
build = false

[profile.release]
lto = "fat"
opt-level = 3
strip = "symbols"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
elasticsearch = "8.5.0-alpha.1"
notify = "6.1.1"
serde = { version = "~1", features = ["derive"]}
serde_json = "~1"
tokio = { version = "1.32.0", features = ["full"]}

[dev-dependencies]
temp-dir = "0.1.11"
